Added template driven form

--- a/src/app/main/add/add.component.css
+++ b/src/app/main/add/add.component.css
@@ -23,3 +23,7 @@ textarea:focus::placeholder {
 input:focus::placeholder {
     color: transparent;;
 }
+
+.form-control.ng-touched.ng-invalid {
+    border: 2px solid red;
+  } 
