Added custom directive tooltip feature

--- a/src/app/main/edit/edit.component.html
+++ b/src/app/main/edit/edit.component.html
@@ -54,7 +54,7 @@
                     </div>
                     <div class="form-row">
                         <div class="col-lg-7">
-                            <input type="button" value="Edit Task" class="submit-button my-2">
+                            <input type="submit" value="Edit Task" class="submit-button my-2">
                         </div>   
                     </div>
                 </form>
